<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/note_pin"
        android:contentDescription="@string/pin_the_current_note"
        android:icon="@drawable/ic_pin_light"
        android:title="@string/pin"
        app:showAsAction="always" />
    <item
        android:id="@+id/note_add_reminder"
        android:contentDescription="@string/add_a_reminder_to_current_note"
        android:icon="@drawable/ic_bell_light"
        android:title="@string/add_reminder"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/note_delete"
        android:contentDescription="@string/delete_this_note"
        android:icon="@drawable/ic_trash_light"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/note_send_to_archive"
        android:contentDescription="@string/send_the_current_note_to_archive"
        android:icon="@drawable/ic_archive_light"
        android:title="@string/send_to_archive"
        app:showAsAction="withText" />
    <item
        android:id="@+id/note_make_copy"
        android:contentDescription="@string/make_a_copy_of_this_note"
        android:icon="@drawable/ic_copy_light"
        android:title="@string/make_a_copy"
        app:showAsAction="withText" />
    <item
        android:id="@+id/note_share"
        android:contentDescription="@string/share_this_note"
        android:icon="@drawable/ic_share_light"
        android:title="@string/share_note"
        app:showAsAction="withText" />
</menu>